--- a/angular-workshop-app/src/app/app.component.html
+++ b/angular-workshop-app/src/app/app.component.html
@@ -3,13 +3,10 @@
   <nav style="width: 200px; margin-right: 20px;">
     <ul>
       <li><a routerLink="/home">Home</a></li>
-      <li><a routerLink="/about">About</a></li>
+      <li><a routerLink="/cat">Cat</a></li>
       <li><a routerLink="/assignment-2">Assignment 2</a></li>
     </ul>
   </nav>
-  <div style="flex: 1;">
-    <router-outlet></router-outlet>
-  </div>
 </div>
 
 
