--- a/angular-workshop-app/src/app/assignment-2/assignment-2.component.html
+++ b/angular-workshop-app/src/app/assignment-2/assignment-2.component.html
@@ -4,24 +4,33 @@
       <div>
           <label for="name">Name:</label>
           <input id="name" formControlName="name" type="string">
+          <div *ngIf="myForm.invalid">Please enter your name</div>
       </div>
       <div>
           <label for="age">Age:</label>
           <input id="age" formControlName="age" type="number">
+          <div *ngIf="myForm.invalid">Age must be 1 - 200 </div>
       </div>
       <div>
           <label for="sex">Gender:</label>
-          <select id="sex" formControlName="sex">
-          <option *ngFor="let gender of genders" [value]="gender">{{ gender }}</option>
-          </select>
+            <select id="sex" formControlName="sex" (change)="onGenderChange()">
+              <option *ngFor="let gender of genders" [value]="gender">{{ gender }}</option>
+              <option value="Other">Other</option>
+            </select>
+            <div *ngIf="isOtherSelected">
+              <input type="text" formControlName="otherGender" placeholder="Please specify" />
+            </div>
+          <div *ngIf="myForm.invalid">Please select at least 1 option</div>
       </div>
       <div>
           <label for="email">Email:</label>
           <input id="email" formControlName="email" type="string">
+          <div *ngIf="myForm.invalid">Email must have "xxx&#64;xxx.com" format</div>
       </div>
       <div>
           <label for="password">Password:</label>
           <input id="password" formControlName="password" type="password">
+          <div *ngIf="myForm.invalid">Password must have at least 8 charecter</div>
       </div>
   </div>
   
