--- a/angular-workshop-app/src/app/assignment-2/assignment-2.component.css
+++ b/angular-workshop-app/src/app/assignment-2/assignment-2.component.css
@@ -46,3 +46,10 @@ form div {
     border-radius: 5px;
     white-space: pre-wrap;
   }
+  .title {
+    font-size: 24px;
+    font-weight: bold;
+    color: #333;
+    text-align: center;
+    margin: 20px 0;
+}
