--- a/angular-workshop-app/src/app/assignment-2/assignment-2.component.html
+++ b/angular-workshop-app/src/app/assignment-2/assignment-2.component.html
@@ -1,6 +1,7 @@
 
 <form [formGroup]="myForm" (ngSubmit)="onSubmit()" appFormStyle>
   <div>
+    <div class="title">Information</div>
       <div>
           <label for="name">Name:</label>
           <input id="name" formControlName="name" type="string">
